# lockframe

./: .gitignore  Cargo.toml  clippy.toml  rustfmt.toml
.cargo-husky/hooks/: pre-commit
.github/workflows/: ci.yml  nightly-fuzz.yml
crates/kalandra-client/src/: client.rs
crates/kalandra-core/: Cargo.toml
crates/kalandra-core/src/: connection.rs  lib.rs  room_manager.rs
crates/kalandra-core/tests/: chaos_connection.proptest-regressions  chaos_connection.rs  chaos_sequencer.rs  connection_properties.rs  mls_group_properties.rs  room_manager_test.rs
crates/kalandra-crypto/: Cargo.toml
crates/kalandra-crypto/src/: lib.rs
crates/kalandra-crypto/tests/: sender_keys_properties.rs
crates/kalandra-proto/src/: header.rs  (+1 more)
crates/kalandra-server/: Cargo.toml
crates/lockframe-app/: Cargo.toml
crates/lockframe-app/src/: app.rs  bridge.rs  driver.rs  event.rs  lib.rs  runtime.rs
crates/lockframe-app/tests/: app_integration_test.rs  app_properties.rs
crates/lockframe-client/: Cargo.toml
crates/lockframe-core/: Cargo.toml
crates/lockframe-harness/: Cargo.toml
crates/lockframe-proto/: Cargo.toml
crates/lockframe-proto/src/: flags.rs  frame.rs  header.rs  lib.rs  opcodes.rs
crates/lockframe-proto/src/payloads/: app.rs  mls.rs  mod.rs  session.rs
crates/lockframe-server/: Cargo.toml
crates/lockframe-tui/: Cargo.toml
crates/sunder-harness/: Cargo.toml
crates/sunder-proto/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: connection_state_fuzzer.rs  e2e_pipeline_fuzzer.rs  mls_signature_fuzzer.rs  room_manager_fuzzer.rs  sequencer_invalid.rs
(+138 files in other folders)
