[package]
name = "lockframe-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Application layer state machines for UI and protocol orchestration"

[lints]
workspace = true

[dependencies]
lockframe-client = { path = "../lockframe-client" }
lockframe-core = { path = "../lockframe-core" }
lockframe-proto = { path = "../lockframe-proto" }
tracing = "0.1"

[dev-dependencies]
lockframe-harness = { path = "../lockframe-harness" }
proptest = "1"
