[package]
name = "lockframe-proto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
ciborium = "0.2"
bitflags = { version = "2.6", features = ["serde"] }
thiserror = "2.0"
zerocopy = { version = "0.8", features = ["derive"] }
bytes = "1.9"
insta = "1.46.0"
hex = "0.4.3"

[dev-dependencies]
proptest = "1.5"
hex-literal = "1.1"

[lints]
workspace = true

